[package]
name = "oraclesh"
version = "0.1.0"
authors = [
    "Alex Koz. <alexanderkozlovskii@wings.ai>",
    "Dm. Yakushev <dmitryyakushev@wings.ai>",
    "Maxim Kurnikov <maximkurnikov@wings.ai>"
]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
libc = "0.2.71"
nix = "0.17.0"
byteorder = "1.3.2"
log = "0.4.8"
twox-hash = "1.5.0"

